--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/slicknav.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/styless.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css">
 </head>
 
 <body>
@@ -34,8 +34,12 @@
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                <li><a href="#"><i class="fa fa-heart"></i> 
+                    <!-- <span>1</span> -->
+                </a></li>
+                <li><a href="#"><i class="fa fa-shopping-bag"></i> 
+                    <!-- <span>3</span> -->
+                </a></li>
             </ul>
             <!-- <div class="header__cart__price">item: <span>$150.00</span></div> -->
         </div>
@@ -84,7 +88,7 @@
                         <div class="header__top__left">
                             <ul>
                                 <li><i class="fa fa-envelope"></i> ecommerce@gmail.com</li>
-                                <li>Free Shipping for all Order of $99</li>
+                                <!-- <li>Free Shipping for all Order of $99</li> -->
                             </ul>
                         </div>
                     </div>
@@ -131,10 +135,14 @@
                 <div class="col-lg-3">
                     <div class="header__cart">
                         <ul>
-                            <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-                            <li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
+                            <li><a href="#"><i class="fa fa-heart"></i> 
+                                <!-- <span>1</span> -->
+                            </a></li>
+                            <li><a href="#"><i class="fa fa-shopping-bag"></i> 
+                                <!-- <span>3</span> -->
+                            </a></li>
                         </ul>
-                        <div class="header__cart__price">item: <span>$150.00</span></div>
+                        <!-- <div class="header__cart__price">item: <span>$150.00</span></div> -->
                     </div>
                 </div>
             </div>
